--- a/index.html
+++ b/index.html
@@ -1,116 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Santiago Cellitti">
-    <meta name="description" content="Empresa de telefonia movil que presenta una tecnologia innovadora que se diferencia de las demas compañias, presentando señal sateliteal directo a tu dispositivo sin importar la zona en la que estes.">
-    <meta name="keywords" content="señal satelital, telefonia movil, movil, datos">
-    <link rel="icon" href="./ico/negro-verde.ico">
-    <!-- normalize -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- styles -->
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-    <!-- aos animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- reponsive -->
-    <link rel="stylesheet" href="./css/responsive.css">
-    <title>Up Signal</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Santiago Cellitti">
+  <meta name="description"
+    content="Up Signal ofrece servicio de alta velocidad y baja latencia en cualquier parte del mundo. Disfruta de la quinta generación de internet satelital con planes y precios accesibles.">
+  <meta name="keywords" content="señal satelital, telefonía móvil, móvil, datos, internet, descuentos">
+  <link rel="icon" href="./ico/hotspot.ico">
+  <!-- normalize -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- scss -->
+  <link rel="stylesheet" href="./sass/main.css">
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+  <title>Up Signal</title>
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark">
+  <nav class="navbar navbar-expand-lg nav-bs">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">US</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <a class="navbar-brand text-light" href="#"><img class="logo" src="./img/hotspot.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon light"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+            <a class="nav-link link-light active" aria-current="page" href="index.html">INICIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/planes-prepago.html">PLANES PREPAGO</a>
+            <a class="nav-link link-light" href="./pages/planes-prepago.html">PLANES PREPAGO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/planes-factura.html">PLANES POSPAGO</a>
+            <a class="nav-link link-light" href="./pages/planes-factura.html">PLANES POSPAGO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/us-club.html">US CLUB</a>
+            <a class="nav-link link-light" href="./pages/us-club.html">US CLUB</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/ayuda.html">AYUDA</a>
+            <a class="nav-link link-light" href="./pages/ayuda.html">AYUDA</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-    <main class="main0">
-        <h1 class="descripcion">UP SIGNAL</h1>
-        <div>
-            <p class="parrafo">Up Signal ofrece servicio de alta velocidad y baja latencia en cualquier parte del mundo. Disfruta de la quinta generacion de internet satelital con planes y precios accesibles. </p>
-        </div>
-    </main> 
+  <main class="main0">
+    <h1 class="descripcion">UP SIGNAL</h1>
+    <div>
+      <p class="parrafo">Up Signal ofrece servicio de alta velocidad y baja latencia en cualquier parte del mundo.
+        Disfruta de la quinta generacion de internet satelital con planes y precios accesibles. </p>
+    </div>
+  </main>
+  <div class="info-main">
     <section class="section-header">
-        <img src="img/satelites-planeta.png" alt="satelites">
-        <div>
-          <h2 class="descripcion">SEÑAL DE ALTA VELOCIDAD DONDE SEA QUE ESTES</h2>
-          <p class="parrafo">Actualmente contamos con mas de 1.900 satelites en órbita alrededor del mundo, con esto se logra la alta velocidad de internet de baja latencia, conexion a nivel global al alcance de cualquiera y su alta fiabilidad sin microcortes.</p>
-          <a href="#" class="boton-info">MAS INFORMACION</a>
-        </div>
+      <img src="img/satelites-planeta.png" alt="satelites">
+      <div>
+        <h2 class="descripcion">SEÑAL DE ALTA VELOCIDAD DONDE SEA QUE ESTES</h2>
+        <p class="parrafo">Actualmente contamos con mas de 1.900 satelites en órbita alrededor del mundo, con esto se
+          logra la alta velocidad de internet de baja latencia, conexión a nivel global al alcance de cualquiera y su
+          alta fiabilidad sin microcortes.</p>
+        <a href="#" class="boton-info">MÁS INFORMACIÓN</a>
+      </div>
     </section>
     <section class="section-header2">
-          <div>    
-            <h2 class="descripcion">SERVICIO TÉCNICO LAS 24 HORAS DEL DÍA</h2>
-            <p class="parrafo">Contamos con atención 24/7 por cualquier duda o inconveniente que presente, nuestros empleados estarán a la espera para poder ayudarte a solucionar todos tus problemas.</p>
-            <a href="#" class="boton-info">SOPORTE</a>
-          </div>
-          <img src="img/telemarketer-m.png" alt="servicio tecnico">
+      <div>
+        <h2 class="descripcion">SERVICIO TÉCNICO LAS 24 HORAS DEL DÍA</h2>
+        <p class="parrafo">Contamos con atención las 24 horas del día, los 7 días de la semana por cualquier duda o inconveniente que presente, nuestros
+          empleados estarán a la espera para poder ayudarte a solucionar todos tus problemas.</p>
+        <a href="#" class="boton-info">SOPORTE</a>
+      </div>
+      <img src="img/telemarketer-m.png" alt="servicio tecnico">
     </section>
     <section class="section-header3">
-        <img src="img/movil.jpg" alt="satelites">
-        <div>
-            <h2 class="descripcion">ADMINISTRA TU PLAN DESDE NUESTRA APLICACIÓN</h2>
-            <p class="parrafo">Recomendamos que instales nuestra aplicación móvil para que puedas obtener una mejor experiencia con nuestro servicio.</p>
-            <a href="#" class="boton-info">APP STORE</a>
-            <a href="#" class="boton-info2">PLAY STORE</a>
-        </div>
+      <img src="img/movil.jpg" alt="satelites">
+      <div>
+        <h2 class="descripcion">ADMINISTRA TU PLAN DESDE NUESTRA APLICACIÓN</h2>
+        <p class="parrafo">Recomendamos que instales nuestra aplicación móvil para que puedas obtener una mejor
+          experiencia con nuestro servicio.</p>
+        <a href="https://www.apple.com/la/app-store/" target="_blank" class="boton-info">APP STORE</a>
+        <a href="https://play.google.com/store/games?hl=es_AR&gl=US&pli=1" target="_blank" class="boton-info2">PLAY
+          STORE</a>
+      </div>
     </section>
     <section class="section-header4">
-          <div>
-            <h2 class="descripcion">PRUEBA NUESTRO SERVICIO ANTES DE CONTRATAR</h2>
-            <p class="parrafo">Puedes comunicarte con nuestro soporte para que podamos brindarte una prueba gratuita de 3 días.</p>
-            <a href="#" class="boton-info">COMIENZA TU PRUEBA</a>
-          </div>
-          <img src="img/prueba.jpg" alt="servicio tecnico">
+      <div>
+        <h2 class="descripcion">PRUEBA NUESTRO SERVICIO ANTES DE CONTRATAR</h2>
+        <p class="parrafo">Puedes comunicarte con nuestro soporte para que podamos brindarte una prueba gratuita de 3
+          días.</p>
+        <a href="#" class="boton-info">COMIENZA TU PRUEBA</a>
+      </div>
+      <img src="img/prueba.jpg" alt="servicio tecnico">
     </section>
-    <footer class="footer">
-        <div class="empresa-footer">
-            <h4>Up Signal © 2022</h4>
-        </div>
-        <div class="terminos-footer">
-            <ul class="footer-lista"> <!-- links no redireccionables -->
-                <li class="item-lista"><a href="#">Avisos legales</a></li>
-                <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
-                <li class="item-lista"><a href="#">Centro de privacidad</a></li>
-                <li class="item-lista"><a href="#">Trabaja con nosotros</a></li>
-                <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
-            </ul>
-        </div>
-    </footer>
-    <!-- aos animation -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <!-- boostrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </div>
+
+  <footer class="footer">
+    <div class="empresa-footer">
+      <h4>Up Signal © 2022</h4>
+    </div>
+    <div class="terminos-footer">
+      <ul class="footer-lista">
+        <!-- links no redireccionables -->
+        <li class="item-lista"><a href="#">Avisos legales</a></li>
+        <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
+        <li class="item-lista"><a href="#">Centro de privacidad</a></li>
+        <li class="item-lista"><a href="#">Trabaja con nosotros</a></li>
+        <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
+      </ul>
+    </div>
+  </footer>
+  <!-- boostrap javascript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
