--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Santiago Cellitti">
-    <meta name="description" content="Empresa de telefonia movil que presenta una tecnologia innovadora que se diferencia de las demas compañias, presentando señal sateliteal directo a tu dispositivo sin importar la zona en la que estes.">
-    <meta name="keywords" content="señal satelital, telefonia movil, movil, datos">
-    <link rel="icon" href="../ico/negro-verde.ico">
-    <!-- normalize -->
-    <link rel="stylesheet" href="../css/normalize.css">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- styles -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-    <!-- aos animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- responsive -->
-    <link rel="stylesheet" href="../css/responsive.css">
-    <title>Ayuda | Up Signal</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Santiago Cellitti">
+  <meta name="description" content="Podés contactarnos por cualquier consulta que tengas de nuestro servicio.">
+  <meta name="keywords" content="señal satelital, telefonía móvil, móvil, datos, internet, descuentos">
+  <link rel="icon" href="../ico/hotspot.ico">
+  <!-- normalize -->
+  <link rel="stylesheet" href="../css/normalize.css">
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- scss -->
+  <link rel="stylesheet" href="../sass/main.css">
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+  <title>Ayuda | Up Signal</title>
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark">
+  <nav class="navbar navbar-expand-lg nav-bs navbar-light w-100">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">US</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand text-light" href="#"><img class="logo" src="../img/hotspot.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">INICIO</a>
+            <a class="nav-link link-light" href="../index.html">INICIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
+            <a class="nav-link link-light" href="./planes-prepago.html">PLANES PREPAGO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
+            <a class="nav-link link-light" href="./planes-factura.html">PLANES POSPAGO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./us-club.html">US CLUB</a>
+            <a class="nav-link link-light" href="./us-club.html">US CLUB</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./ayuda.html">AYUDA</a>
+            <a class="nav-link link-light active" aria-current="page" href="./ayuda.html">AYUDA</a>
           </li>
         </ul>
       </div>
@@ -57,7 +57,8 @@
       <h2>CONTACTO</h2>
     </div>
     <div class="contenedor-parrafo-contacto">
-      <p>Si tenes dudas de nuestro servicio no dudes en dejarnos tus datos y consulta para que podamos responderte a la brevedad.</p>
+      <p>Si tenés preguntas de nuestro servicio no dudes en dejarnos tus datos y consulta para que podamos responderte a
+        la brevedad.</p>
     </div>
   </div>
   <div class="contenedor-form-contacto">
@@ -82,7 +83,7 @@
           <option value="sa">SUR AMÉRICA</option>
         </select>
       </div>
-      <div>
+      <div class="consultas">
         <input placeholder="CONSULTE AQUÍ..." class="input-form query" type="text" required name="query">
       </div>
       <div class="area-submit">
@@ -91,32 +92,32 @@
     </form>
   </div>
   <div class="newsletter">
-    <p>Si deseas recibir novedades y promociones envienos un correo electronico donde desee recibir estas noticias.</p>
+    <p>Si querés recibir novedades y promociones, envianos un correo electrónico donde desees obtener esta información.
+    </p>
     <div class="suscripcion">
       <input placeholder="INGRESE CORREO ELECTRONICO" class="input-form" name="newsletter" type="email">
       <button class="boton-suscripcion">SUSCRIBIRSE</button>
     </div>
   </div>
-    <footer id="footer" class="footer">
-        <div class="empresa-footer">
-            <h4>Us Signal © 2022</h4>
-        </div>
-        <div class="terminos-footer">
-            <ul class="footer-lista"> <!-- links no redireccionables -->
-                <li class="item-lista"><a href="#">Avisos legales</a></li>
-                <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
-                <li class="item-lista"><a href="#">Centro de privacidad</a></li>
-                <li class="item-lista"><a href="#">Trabaja con nosotros</a></li>
-                <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
-            </ul>
-        </div>
-    </footer>
-    <!-- aos animation -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <!-- boostrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <footer id="footer" class="footer">
+    <div class="empresa-footer">
+      <h4>Us Signal © 2022</h4>
+    </div>
+    <div class="terminos-footer">
+      <ul class="footer-lista">
+        <!-- links no redireccionables -->
+        <li class="item-lista"><a href="#">Avisos legales</a></li>
+        <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
+        <li class="item-lista"><a href="#">Centro de privacidad</a></li>
+        <li class="item-lista"><a href="#">Trabaja con nosotros</a></li>
+        <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
+      </ul>
+    </div>
+  </footer>
+  <!-- boostrap javascript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
