--- a/pages/planes-factura.html
+++ b/pages/planes-factura.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Santiago Cellitti">
-    <meta name="description" content="Empresa de telefonia movil que presenta una tecnologia innovadora que se diferencia de las demas compañias, presentando señal sateliteal directo a tu dispositivo sin importar la zona en la que estes.">
-    <meta name="keywords" content="señal satelital, telefonia movil, movil, datos">
-    <link rel="icon" href="../ico/negro-verde.ico">
+    <meta name="description"
+        content="Elegí uno de nuestros planes pospago, cada uno tiene características difrentes para adaptarse a las necesidades de cualquiera.">
+    <meta name="keywords" content="señal satelital, telefonía móvil, móvil, datos, internet, descuentos">
+    <link rel="icon" href="../ico/hotspot.ico">
     <!-- normalize -->
     <link rel="stylesheet" href="../css/normalize.css">
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- styles -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- scss -->
+    <link rel="stylesheet" href="../sass/main.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-    <!-- aos animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- responsive -->
-    <link rel="stylesheet" href="../css/responsive.css">
     <title>Planes Pospago | Up Signal</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg nav-bs">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">US</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./planes-factura.html">PLANES POSPAGO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./us-club.html">US CLUB</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./ayuda.html">AYUDA</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="#"><img class="logo" src="../img/hotspot.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="../index.html">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="./planes-prepago.html">PLANES PREPAGO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light active" aria-current="page" href="./planes-factura.html">PLANES
+                            POSPAGO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="./us-club.html">US CLUB</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="./ayuda.html">AYUDA</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="menu-combos-pospago">
-        <h2 class="titulo-menu-combos-pospago">ASEGURATE DE ESTAR SIEMPRE CONECTADO CON NUESTROS PLANES POSPAGO</h2>
-        <p class="descripcion-menu-combos-pospago">Con la contratacion de uno de nuestros planes Pospago, tenes acceso a <a class="link-parrafo" href="#redirection">OS Club</a>.</p>
-        <p class="descripcion-menu-combos-pospago">Además vas a contar con acceso ilimitado aplicaciones sin que consuman datos!</p>
+        <h2 class="titulo-menu-combos-pospago">PLANES POSPAGO</h2>
+        <p class="descripcion-menu-combos-pospago">Asegurate de mantenerte siempre conectado con nuestros planes
+            pospago. Con la contratación de cualquiera, tenés acceso a
+            <a class="link-parrafo" href="#redirection">US CLUB</a>
+            .
+        </p>
+        <p class="descripcion-menu-combos-pospago">¡Además vas a contar con acceso ilimitado a aplicaciones sin que
+            consuman datos!
+        </p>
     </div>
     <div class="combos-pospago">
         <div class="combo-pospago combo-pospago1">
@@ -71,9 +80,12 @@
             <div class="contenedor-lista-pospago">
                 <ul class="lista-combo-pospago">
                     <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp</span> GRATIS</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">10 Gigas</span> para que navegues por internet</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 Minutos</span> para llamadas a cualquier compañia</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 SMS</span> para cualquier compañia</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">10 Gigas</span> para que
+                        navegues por internet</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 Minutos</span> para
+                        llamadas a cualquier compañía</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 SMS</span> para cualquier
+                        compañía</li>
                 </ul>
             </div>
             <div class="contenedor-boton-pospago">
@@ -93,10 +105,14 @@
             </div>
             <div class="contenedor-lista-pospago">
                 <ul class="lista-combo-pospago">
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp y Tik Tok</span> GRATIS</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">15 Gigas</span> para que navegues por internet</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 Minutos</span> para llamadas a cualquier compañia</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 SMS</span> para cualquier compañia</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp y Tik Tok</span>
+                        GRATIS</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">15 Gigas</span> para que
+                        navegues por internet</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 Minutos</span> para
+                        llamadas a cualquier compañía</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 SMS</span> para cualquier
+                        compañía</li>
                 </ul>
             </div>
             <div class="contenedor-boton-pospago">
@@ -117,10 +133,14 @@
             </div>
             <div class="contenedor-lista-pospago">
                 <ul class="lista-combo-pospago">
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp, Tik Tok y Spotify</span> GRATIS</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">30 Gigas</span> para que navegues por internet</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 Minutos</span> para llamadas a cualquier compañia</li>
-                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 SMS</span> para cualquier compañia</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp, Tik Tok y
+                            Spotify</span> GRATIS</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">30 Gigas</span> para que
+                        navegues por internet</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 Minutos</span> para
+                        llamadas a cualquier compañía</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 SMS</span> para cualquier
+                        compañía</li>
                 </ul>
             </div>
             <div class="contenedor-boton-pospago">
@@ -129,14 +149,20 @@
         </div>
     </div>
     <div class="menu-combos-pospago2">
-        <p class="descripcion-menu-combos-pospago2">Si ya tenes contratado uno de nuestros Planes, podes conocer todos los beneficios que tenemos para vos haciendo click <a class="link-parrafo2" id="redirection" href="../pages/us-club.html">acá</a>.</p>
+        <p class="descripcion-menu-combos-pospago2">Si ya tenés contratado uno de nuestros planes, podes conocer todos
+            los beneficios que tenemos para vos haciendo click
+            <a class="link-parrafo2" id="redirection" href="../pages/us-club.html">
+                acá
+            </a>.
+        </p>
     </div>
     <footer id="footer" class="footer">
         <div class="empresa-footer">
             <h4>Up Signal © 2022</h4>
         </div>
         <div class="terminos-footer">
-            <ul class="footer-lista"> <!-- links no redireccionables -->
+            <ul class="footer-lista">
+                <!-- links no redireccionables -->
                 <li class="item-lista"><a href="#">Avisos legales</a></li>
                 <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
                 <li class="item-lista"><a href="#">Centro de privacidad</a></li>
@@ -145,12 +171,10 @@
             </ul>
         </div>
     </footer>
-    <!-- aos animation -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
     <!-- boostrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
