--- a/pages/planes-prepago.html
+++ b/pages/planes-prepago.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Santiago Cellitti">
-    <meta name="description" content="Empresa de telefonia movil que presenta una tecnologia innovadora que se diferencia de las demas compañias, presentando señal sateliteal directo a tu dispositivo sin importar la zona en la que estes.">
-    <meta name="keywords" content="señal satelital, telefonia movil, movil, datos">
-    <link rel="icon" href="../ico/negro-verde.ico">
+    <meta name="description"
+        content="Elegí uno de nuestros planes prepago, cada uno tiene características difrentes para adaptarse a las necesidades de cualquiera.">
+    <meta name="keywords" content="señal satelital, telefonía móvil, móvil, datos, internet, descuentos">
+    <link rel="icon" href="../ico/hotspot.ico">
     <!-- normalize -->
     <link rel="stylesheet" href="../css/normalize.css">
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- styles -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- scss -->
+    <link rel="stylesheet" href="../sass/main.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
-    <!-- aos animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- responsive -->
-    <link rel="stylesheet" href="../css/responsive.css">
     <title>Planes Prepago | Up Signal</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg nav-bs">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">US</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./planes-prepago.html">PLANES PREPAGO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./us-club.html">US CLUB</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./ayuda.html">AYUDA</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand text-light" href="#"><img class="logo" src="../img/hotspot.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="../index.html">INICIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light active" aria-current="page" href="./planes-prepago.html">PLANES
+                            PREPAGO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="./planes-factura.html">PLANES POSPAGO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="./us-club.html">US CLUB</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-light" href="./ayuda.html">AYUDA</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="menu-combos">
         <h2 class="titulo-menu-combos">¡ELEGÍ EL COMBO QUE MÁS TE GUSTE!</h2>
-        <p class="descripcion-menu-combos">¿No queres estar pendiente de si pagaste o no tu factura? ¡No te preocupes! Con los planes prepago solamente recargas cuando vos lo necesites.</p>
-        <p class="descripcion-menu-combos">Todos los combos son x 30 dias, y con la compra de cualquiera tenes WhatsApp gratis!</p>
+        <p class="descripcion-menu-combos">¿No queres estar pendiente de si pagaste o no tu factura? ¡No te preocupes!
+            Con los planes prepago solamente recargas cuando vos lo necesites.</p>
+        <p class="descripcion-menu-combos">¡Todos los combos son x 30 dias, y con la compra de cualquiera tenes WhatsApp, Tik Tok y Spotify gratis!</p>
     </div>
     <div class="combos">
         <div class="combo combo1">
@@ -153,7 +157,8 @@
     </div>
     <div class="menu-combos-extra">
         <h2 class="titulo-menu-combos-extra">¿TE QUEDASTE SIN DATOS?</h2>
-        <p class="descripcion-menu-combos-extra">Acá podes elegir unos Combos extras x 7 dias para que nunca te quedes desconectado.</p>
+        <p class="descripcion-menu-combos-extra">Acá podes elegir unos Combos extras por 7 días para que nunca te quedes
+            desconectado.</p>
     </div>
     <div class="combos-extra">
         <div class="combo-extra combo-extra1">
@@ -212,11 +217,12 @@
         </div>
     </div>
     <footer id="footer" class="footer">
-        <div class="empresa-footer"> 
+        <div class="empresa-footer">
             <h4>Up Signal © 2022</h4>
         </div>
         <div class="terminos-footer">
-            <ul class="footer-lista"> <!-- links no redireccionables -->
+            <ul class="footer-lista">
+                <!-- links no redireccionables -->
                 <li class="item-lista"><a href="#">Avisos legales</a></li>
                 <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
                 <li class="item-lista"><a href="#">Centro de privacidad</a></li>
@@ -225,12 +231,10 @@
             </ul>
         </div>
     </footer>
-    <!-- aos animation -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
     <!-- boostrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
